--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Application For Managing User",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start:server": "nodemon server.js",
+    "start:app": "nodemon app.js",
+    "init": "PGPASSWORD=postgres psql -U postgres -d postgres -f init.sql",
     "test": "test"
   },
   "keywords": [
