chore: add deploy command

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "deploy:netlify": "npm run init && npm run start",
     "init": "PGPASSWORD=postgres psql -U postgres -d postgres -f init.sql",
     "test": "test"
   },
